--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,39 +6,87 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇦_CA_加拿大
-    type: trojan
-    server: 138.197.152.9
-    port: 443
-    udp: true
-    password: d71655f5-d095-4365-8796-4f52772c0cc6
-    sni: dl.kgvn.garenanow.com
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇳🇱_NL_荷兰
+    name: 🇺🇸_US_美国_1
     type: vmess
-    server: 46.182.107.15
+    server: 45.58.153.24
     port: 30000
     cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
     alterId: 64
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1702215223320
+      path: /path/1702392255355
+      headers:
+        host: www.77935707.xyz
+  - &id002
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: 94.131.10.135
+    port: 8080
+    cipher: auto
+    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: 94.131.10.135
+  - &id003
+    name: 🇬🇧_GB_英国_1
+    type: vmess
+    server: 172.99.190.109
+    port: 443
+    cipher: auto
+    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: linkvws
   - &id004
-    name: 🇺🇸_US_美国_1
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 45.58.39.13
+    port: 58428
+    password: 31LdYhP8Ae
+    cipher: aes-256-gcm
+  - &id005
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id006
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: ee1-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: ea85d824-2faa-4bb2-849b-a2965db4ce18
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee1-vmess.sshmax.xyz
+  - &id007
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: whatismyipaddress.com
     port: 2052
@@ -52,45 +100,122 @@ proxies:
       path: /
       headers:
         host: mgtow_cdn.yunjisuan.cf
-  - &id005
-    name: 🇺🇸_US_美国_2
+  - &id008
+    name: 🇺🇸_US_美国_6
+    type: ss
+    server: 35.90.10.174
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id009
+    name: 🇺🇸_US_美国_7
+    type: ss
+    server: 35.87.39.181
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id010
+    name: 🇺🇸_US_美国_8
+    type: ss
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id011
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 195.154.169.198
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id012
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 51.159.111.208
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 145.239.6.202
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id014
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 195.154.185.174
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇬🇧_GB_英国_2
+    type: ss
+    server: 77.72.5.113
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id016
+    name: 🇸🇪_SE_瑞典_1
+    type: ss
+    server: 45.8.147.80
+    port: 5741
+    password: Q5CEiebSuSl2qFkfE4ztG2
+    cipher: chacha20-ietf-poly1305
+  - &id017
+    name: 🇩🇪_DE_德国_2
     type: vmess
-    server: 38.180.33.136
-    port: 50104
+    server: 217.160.45.31
+    port: 8880
     cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇺🇦_UA_乌克兰
-    type: vmess
-    server: 193.238.153.14
-    port: 8443
-    cipher: auto
-    uuid: 159693e0-5146-482d-9e46-8c4f2fc865b1
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: cdn.yifenjichang.top
-    port: 2086
-    cipher: none
-    uuid: 900ceafc-30b8-4581-a305-31854f563e4f
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 900ceafc-30b8-4581-a305-31854f563e4f-vm
-      headers:
-        host: thesis-grande-residence-landscapes.trycloudflare.com
-  - &id008
-    name: 🇺🇸_US_美国_4
+      path: /
+  - &id018
+    name: 🇵🇦_PA_巴拿马
+    type: ss
+    server: 138.186.142.4
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id019
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 45.58.153.25
+    port: 30000
+    cipher: auto
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702961716738
+  - &id020
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇦🇷_AR_阿根廷
+    type: ss
+    server: 190.103.176.29
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id022
+    name: 🇺🇸_US_美国_11
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -103,19 +228,38 @@ proxies:
     ws-opts:
       path: /api/v3/download.getFile
       headers:
-        host: ssrsub.v005.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 104.237.128.72
-    port: 14432
-    cipher: auto
-    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
-    alterId: 0
-    tls: false
+        host: ssrsub.v03.ssrsub.com
+  - &id023
+    name: 🇪🇸_ES_西班牙
+    type: ss
+    server: 92.38.171.89
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id024
+    name: 🇬🇧_GB_英国_3
+    type: ss
+    server: 77.72.5.150
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id025
+    name: 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
     skip-cert-verify: true
     network: tcp
-  - &id010
+  - &id026
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: ss
+    server: service.ouluyun9803.com
+    port: 21003
+    password: 73637cec-699d-4d87-99af-0776ac880604
+    cipher: chacha20-ietf-poly1305
+  - &id027
     name: 🇬🇮_GI_直布罗陀
     type: trojan
     server: 95.164.69.115
@@ -125,103 +269,8 @@ proxies:
     sni: gbs.pptv-tv.store
     skip-cert-verify: true
     network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 168.235.72.221
-    port: 15551
-    cipher: auto
-    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 132.145.132.227
-    port: 37121
-    cipher: auto
-    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id013
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: els_trojanone.yunjisuan.cf
-    port: 14866
-    udp: true
-    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    sni: els_trojanone.yunjisuan.cf
-    skip-cert-verify: true
-    network: tcp
-  - &id014
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: www.udemy.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id015
-    name: 🇸🇪_SE_瑞典
-    type: vmess
-    server: www.shopify.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id016
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: 104.21.69.44
-    port: 2087
-    cipher: auto
-    uuid: 8fada9c0-c348-4465-aade-ff0311454178
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: uFGYa.mookomeilz.homes
-    network: ws
-    ws-opts:
-      path: /@FreeVPNHomes@FreeVPNHomes
-      headers:
-        host: pAnel159.moOkomeILz.homes
-  - &id017
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-    type: vmess
-    server: 162.159.142.212
-    port: 80
-    cipher: auto
-    uuid: b7c3855f-e549-4fce-8439-ea44d5392f8d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ca3.889611.com
-  - &id018
-    name: 🇺🇸_US_美国_9
+  - &id028
+    name: 🇺🇸_US_美国_12
     type: vmess
     server: sbl2.shabijichang.com
     port: 80
@@ -235,8 +284,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_10
+  - &id029
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: 104.21.75.246
     port: 80
@@ -250,33 +299,8 @@ proxies:
       path: /
       headers:
         host: sbl2.shabijichang.com
-  - &id020
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
-    cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-      headers:
-        host: cold-dawn-9246.fly.dev
-  - &id021
-    name: 🇫🇷_FR_法国_1
-    type: trojan
-    server: fr1.test3.net
-    port: 443
-    udp: true
-    password: b77dd600-971b-11ee-956c-1239d0255272
-    sni: fr1.test3.net
-    skip-cert-verify: true
-    network: tcp
-  - &id022
-    name: 🇺🇸_US_美国_12
+  - &id030
+    name: 🇺🇸_US_美国_14
     type: vmess
     server: 144.202.84.47
     port: 57848
@@ -286,50 +310,120 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id023
-    name: 🇨🇳_CN_中国
+  - &id031
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: lt2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id032
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id033
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: whatismyipaddress.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id034
+    name: 🇺🇸_US_美国_18
     type: ss
-    server: 45.87.153.246
-    port: 6199
-    password: f7EI0dGWQM42T8gwN9CZIj
+    server: 169.197.141.186
+    port: 801
+    password: tvX1v#NSFP_LG_bJ
     cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id025
-    name: 🇬🇧_GB_英国
+  - &id035
+    name: 🇮🇪_IE_爱尔兰
     type: trojan
-    server: 18.171.11.254
+    server: 3.255.61.164
     port: 22222
     udp: true
-    password: telegram-id-privatevpns
+    password: telegram-id-directvpn
     sni: trj.rollingnext.co.uk
     skip-cert-verify: true
     network: tcp
-  - &id026
-    name: 🇩🇪_DE_德国
-    type: trojan
-    server: 213.202.216.14
-    port: 443
-    udp: true
-    password: 7a57c3cd-2300-4867-9da2-9f8504b81af5
-    sni: downloadde.xn--mes358acgm99l.com
+    alpn:
+      - http/1.1
+  - &id036
+    name: 🇺🇸_US_美国_19
+    type: vmess
+    server: 168.235.72.221
+    port: 15551
+    cipher: auto
+    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
-  - &id027
-    name: 🇫🇷_FR_法国_2
-    type: trojan
-    server: 15.188.38.220
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
+  - &id037
+    name: 🇸🇰_SK_斯洛伐克
+    type: vmess
+    server: sk1-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: 06c2b568-b7df-4e80-9031-c83569397db4
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: sk1-vmess.sshmax.xyz
+  - &id038
+    name: 🇸🇪_SE_瑞典_2
+    type: vmess
+    server: www.shopify.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id039
+    name: 🇺🇸_US_美国_20
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
 proxy-groups:
   - name: PROXY
     type: select
@@ -383,6 +477,18 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -415,6 +521,18 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
   - name: SELECT
     type: select
     proxies:
@@ -445,6 +563,18 @@ proxy-groups:
       - *id025
       - *id026
       - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
+      - *id032
+      - *id033
+      - *id034
+      - *id035
+      - *id036
+      - *id037
+      - *id038
+      - *id039
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
