--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,37 +6,34 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国_1
+    name: 🇮🇳_IN_印度_1
     type: vmess
-    server: 104.21.75.246
+    server: 103.113.68.233
     port: 80
     cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
+      path: /vmess
   - &id002
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: 45.58.153.25
-    port: 30000
-    cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
-    tls: true
+    name: 🇺🇸_US_美国_1
+    type: trojan
+    server: 167.68.5.183
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: 6us3.pqjc.buzz
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /path/1702961716738
+      path: /pq/us3
   - &id003
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 104.19.154.92
+    server: 2bbiozh7wbc.servecounterstrike.com
     port: 2083
     cipher: auto
     uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
@@ -49,59 +46,7 @@ proxies:
       headers:
         host: PAneljadid.mookoMEilz.homes
   - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 144.202.84.47
-    port: 57848
-    cipher: auto
-    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 94.131.10.135
-    port: 8080
-    cipher: auto
-    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 94.131.10.135
-  - &id006
-    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
-    type: vmess
-    server: 183.237.20.148
-    port: 52707
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: 45.58.153.24
-    port: 30000
-    cipher: auto
-    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702392255355
-      headers:
-        host: www.77935707.xyz
-  - &id008
-    name: 🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -115,54 +60,11 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v03.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: sbl2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id010
-    name: 🇸🇰_SK_斯洛伐克
-    type: vmess
-    server: sk1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 06c2b568-b7df-4e80-9031-c83569397db4
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: sk1-vmess.sshmax.xyz
-  - &id011
-    name: 🇬🇧_GB_英国
-    type: vmess
-    server: 172.99.190.109
-    port: 443
-    cipher: auto
-    uuid: 03fcc618-b93d-6796-6aed-8a38c975d581
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: linkvws
-  - &id012
-    name: 🇺🇸_US_美国_8
+  - &id005
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: whatismyipaddress.com
-    port: 2082
+    port: 2052
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -173,10 +75,106 @@ proxies:
       path: /
       headers:
         host: mgtow_cdn.yunjisuan.cf
+  - &id006
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.17.184.241
+    port: 80
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mg_cdn.yunjisuan.cf
+  - &id007
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
+    type: vmess
+    server: web.parspack.com
+    port: 80
+    cipher: auto
+    uuid: 5f797b91-c7ec-4178-d19e-9b069b70b446
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: zUlA9.eSmAIlkORea.sHop
+  - &id008
+    name: 🇺🇸_US_美国_5
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id009
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id011
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
+    type: vmess
+    server: 104.18.154.42
+    port: 80
+    cipher: auto
+    uuid: a2f27205-5b59-4a1d-e9ed-c78f7ab4b633
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: Quran14.eSmAIlkORea.sHop
+  - &id012
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 46.182.107.15
+    port: 30000
+    cipher: auto
+    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+    alterId: 64
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /path/1702215223320
   - &id013
     name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
-    server: 2bbiozh7wbc.servecounterstrike.com
+    server: 104.19.154.92
     port: 2083
     cipher: auto
     uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
@@ -191,10 +189,53 @@ proxies:
   - &id014
     name: 🇩🇪_DE_德国
     type: vmess
-    server: ee1-vmess.sshmax.xyz
+    server: 217.160.45.31
+    port: 8880
+    cipher: auto
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: whatismyipaddress.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id016
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 104.17.171.34
     port: 80
     cipher: auto
-    uuid: ea85d824-2faa-4bb2-849b-a2965db4ce18
+    uuid: 60be5ddb-c9f1-48ec-b0ee-f6bd4364b3ce
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: ccs.hostmjj.com
+  - &id017
+    name: 🇮🇳_IN_印度_2
+    type: vmess
+    server: 103.113.68.233
+    port: 8880
+    cipher: auto
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -202,7 +243,35 @@ proxies:
     ws-opts:
       path: /vmess
       headers:
-        host: ee1-vmess.sshmax.xyz
+        host: 103.113.68.233
+  - &id018
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 159.75.178.50
+    port: 47551
+    cipher: auto
+    uuid: 2500a228-8c00-4934-81e0-22281c015a33
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id019
+    name: 🇮🇳_IN_印度_3
+    type: vmess
+    server: ru1-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ru1-vmess.sshmax.xyz
 proxy-groups:
   - name: PROXY
     type: select
@@ -243,6 +312,11 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -262,6 +336,11 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
   - name: SELECT
     type: select
     proxies:
@@ -279,6 +358,11 @@ proxy-groups:
       - *id012
       - *id013
       - *id014
+      - *id015
+      - *id016
+      - *id017
+      - *id018
+      - *id019
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
